# fl_distill_communication_efficient

./: exec.sh  pyproject.toml  run_multiple.sh  run_on_server.sh
code/: data.py  experiment_manager.py  federated_learning.py  fl_devices.py  models.py  pate.py  virtual_adversarial_training.py
