[tool.poetry]
name = "fl_distill"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.48.2"
matplotlib = "^3.3.1"
altair = "^4.1.0"
altair_saver = "^0.5.0"
torch = "^1.6.0"
torchvision = "^0.7.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
